# assignments

./: LICENSE  README.md
.github/workflows/: make_static.yml
backend/: pyproject.toml
backend/src/assignments_backend/: database.py  errors.py  main.py  settings.py
backend/src/assignments_backend/endpoints/: __init__.py  assignment.py  group.py
backend/src/assignments_backend/models/: __init__.py  assignment.py  base.py  group.py
backend/src/assignments_backend/operations/: assignment.py  group.py  hashing.py
backend/src/assignments_backend/schemas/: assignment.py  group.py  pagination.py
backend/src/assignments_backend/utils/: __init__.py  get_count.py  get_utc_now.py  order_by.py
frontend/: .env  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: icon.css
frontend/src/: App.vue  main.ts
frontend/src/api/: api.ts  openapi.d.ts  openapi.json
frontend/src/assets/: assignment.ts
frontend/src/components/: AssignmentDetails.vue  AssignmentsList.vue
frontend/src/errors/: authentication.ts  redirectTo.ts  showError.ts
frontend/src/router/: index.ts
frontend/src/stores/: authentication.ts  task.ts
frontend/src/views/: AssignmentView.vue  CreateAssignment.vue  LoginView.vue  MainView.vue
